--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
 	<properties>
 		<spring.version>3.2.3.RELEASE</spring.version>
+		<security.version>3.1.4.RELEASE</security.version>
 		<junit.version>4.11</junit.version>
 		<jdk.version>1.7</jdk.version>
 	</properties>
@@ -103,6 +104,23 @@
 			<groupId>org.springframework.ws</groupId>
 			<artifactId>spring-xml</artifactId>
 			<version>2.1.3.RELEASE</version>
+		</dependency>
+		
+		<!-- Spring Security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>${security.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${security.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${security.version}</version>
 		</dependency>
 
 	</dependencies>
