Added dynamic pagination to the recipient page

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@ target
 .classpath
 .project
 src/main/resources/PhoneNumberList*.csv
-src/main/resources/application.properties
+application.properties
