--- a/pom.xml
+++ b/pom.xml
@@ -162,10 +162,6 @@
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>${hibernate.version}</version>
 		</dependency>
-		<!-- <dependency> <groupId>mysql</groupId> <artifactId>mysql-connector-java</artifactId> 
-			<version>${mysql.connector.version}</version> </dependency> -->
-		<!-- <dependency> <groupId>postgresql</groupId> <artifactId>postgresql</artifactId> 
-			<version>${postgres.connector.version}</version> </dependency> -->
 		<dependency>
 			<groupId>postgresql</groupId>
 			<artifactId>postgresql</artifactId>
@@ -181,6 +177,13 @@
 			<artifactId>javassist</artifactId>
 			<version>3.12.1.GA</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20140107</version>
+		</dependency>
+		
 
 	</dependencies>
 
